# palindromeda

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: lib.rs
