[package]
name = "palindromeda"
version = "0.2.1"
description = "Palindrome number generator and checker"
documentation = "https://docs.rs/palindromeda"
repository = "https://github.com/CaelusV/palindromeda"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["palindrome", "number"]

[dependencies]
forward_ref = "1.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
