[package]
name = "palindromeda"
version = "1.0.0"
description = "Palindrome number generator and checker at blazing speed"
documentation = "https://docs.rs/palindromeda"
repository = "https://github.com/CaelusV/palindromeda"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["palindrome", "number"]

[dependencies]
forward_ref = "1.0.0"

[dev-dependencies]
criterion = "0.7"

[profile.release]
codegen-units = 1
lto = "fat"

[[bench]]
name = "benchmark"
harness = false
